--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "flag-icons": "^6.2.0",
+    "vue": "^2.6.14",
+    "vue-country-flag": "^2.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
